fix hover on mobile

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Pacifico&display=swap");
 
@@ -428,7 +428,7 @@ section {
 	transition: 600ms ease;
 }
 
-.top:active {
+.top:hover {
 	background: var(--blue);
 }
 
@@ -448,6 +448,9 @@ section {
 }
 
 @media (max-width: 992px) {
+	.top:hover {
+		background: var(--white);
+	}
 	html {
 		font-size: 55%;
 	}
@@ -471,6 +474,9 @@ section {
 }
 
 @media (max-width: 792px) {
+	.top:hover {
+		background: var(--white);
+	}
 	#menu-btn {
 		display: inline-block;
 		transition: 0.2s linear;
@@ -535,6 +541,9 @@ section {
 		grid-template-columns: repeat(1, 1fr);
 		gap: 1.5rem;
 	}
+	.top:hover {
+		background: var(--white);
+	}
 }
 
 @media (max-width: 450px) {
@@ -550,5 +559,9 @@ section {
 		display: grid;
 		grid-template-columns: 1fr;
 		gap: 0.1rem;
+	}
+
+	.top:hover {
+		background: var(--white);
 	}
 }
